# tetsy-wasm-gc

./: .appveyor.yml  .travis.yml  Cargo.toml
src/: main.rs
wasm-gc-api/: Cargo.toml
wasm-gc-api/src/: error.rs  gc.rs  lib.rs
wasm-gc-capi/: Cargo.toml  README.md
wasm-gc-capi/src/: lib.rs
