[package]
name = "tetsy-wasm-gc"
version = "0.1.7"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
repository = "https://github.com/tetcoin/wasm-gc"
homepage = "https://github.com/tetcoin/wasm-gc"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "A CLI tool to garbage collect webassembly modules"
keywords = ["webasm"]
categories = ["development-tools"]

[[bin]]
name = "tetsy-wasm-gc"
path = "src/main.rs"

[dependencies]
env_logger = { version = "0.5", default-features = false }
getopts = "0.2"
tetsy-wasm-gc-api = { path = "wasm-gc-api", version = "0.1.12" }

[workspace]
members = ['wasm-gc-capi']

[profile.release]
panic = 'abort'
lto = true
