[package]
name = "tetsy-wasm-gc"
version = "0.1.7"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
description = "Tetsy cli tool to garbage collect webassembly modules with Tetcore"
keywords = ["tetcoin", "tetcore", "crypto", "blockchain", "framework"]
categories = ["cryptography::cryptocurrencies"]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-wasm-gc"
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"

keywords = ["webasm"]
categories = ["development-tools"]

[[bin]]
name = "tetsy-wasm-gc"
path = "src/main.rs"

[dependencies]
env_logger = { version = "0.5", default-features = false }
getopts = "0.2"
tetsy-wasm-gc-api = { path = "wasm-gc-api", version = "0.1.12" }

[workspace]
members = ['wasm-gc-capi']

[profile.release]
panic = 'abort'
lto = true
