[package]
name = "tetsy-wasm-gc-api"
version = "0.1.12"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
repository = "https://github.com/tetcoin/wasm-gc"
homepage = "https://github.com/tetcoin/wasm-gc"
documentation = "https://docs.rs/tetsy-wasm-gc-api"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "A library to garbage collect webassembly modules"
keywords = ["webasm"]
categories = ["development-tools"]

[lib]
name = "tetsy_wasm_gc"

[dependencies]
tetsy-wasm = "0.41.0"
log = "0.4"
rustc-demangle = "0.1.9"
