[package]
name = "tetsy-wasm-gc-api"
version = "0.1.12"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
description = "Tetsy library to garbage collect webassembly modules with Tetcore"
keywords = ["tetcoin", "tetcore", "crypto", "blockchain", "framework"]
categories = ["cryptography::cryptocurrencies"]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-wasm-gc"
documentation = "https://docs.rs/tetsy-wasm-gc-api"
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"

[lib]
name = "tetsy_wasm_gc"

[dependencies]
tetsy-wasm = "0.41.0"
log = "0.4"
rustc-demangle = "0.1.9"
