[package]
name = "wasm-gc-capi"
version = "0.1.1"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
repository = "https://github.com/tetcoin/wasm-gc"
homepage = "https://github.com/tetcoin/wasm-gc"
documentation = "https://docs.rs/wasm-gc-capi"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "A library to garbage collect webassembly modules"

[lib]
crate-type = ['cdylib']

[dependencies]
tetsy-wasm-gc-api = { version = "0.1.12", path = '../wasm-gc-api' }
cfg-if = "0.1"
wasm-bindgen = { version = "0.2", optional = true }
