[package]
name = "wasm-gc-capi"
version = "0.1.1"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
description = "A library to garbage collect webassembly modules"
keywords = ["tetcoin", "tetcore", "crypto", "blockchain", "framework"]
categories = ["cryptography::cryptocurrencies"]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-wasm-gc"
documentation = "https://docs.rs/tetsy-wasm-gc-capi"
license = "MIT/Apache-2.0"
readme = "README.md"


[lib]
crate-type = ['cdylib']

[dependencies]
tetsy-wasm-gc-api = { version = "0.1.12", path = '../wasm-gc-api' }
cfg-if = "0.1"
wasm-bindgen = { version = "0.2", optional = true }
